# SCIBS

./: .gitignore  README.md  pyproject.toml  requirements.txt
SCIBS_Python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scibs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: Mbfmat.cc  Mbfmat.h  mbf_read.py  tetcor.py  trielec.py  trielec_2.py  trielec_3.py  trielec_4.py  utils.py
src/scibs/: __main__.py  config.py  utils.py
src/scibs/scripts/: __init__.py  pipeline.py  tet2tri.py  tetcor.py  tetwarp.py  trielec.py
src/scibs/utilities/: file.py  graphics.py  mat.py
tests/: test_pot.py  test_tetcor.py
